--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 ---
-layout: default
+layout: frontpage
 title: Useful Studio
 ---
 
-<div class="home">
-<h1>Useful Studio</h1>
-
-<h2>Posts</h2>
-
-  
+<div class="lead">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora praesentium iure maiores corporis, ducimus dignissimos molestiae ipsa culpa. Sunt deserunt ratione perspiciatis commodi placeat, cupiditate maiores et quae optio repellat.</p></div>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium libero deserunt et doloribus ipsum sequi, dolores laborum quae ex, consequatur quod expedita, ducimus fugit aliquam aperiam sapiente vitae beatae dolorum.</p>
+    <p>Rerum debitis saepe assumenda, nam aspernatur. Amet, cumque, repellat. Dolor, ex id obcaecati nam facilis officia. A, natus in odio asperiores! Rem reprehenderit, neque minima. Odit deleniti quibusdam doloribus maiores!</p>
 </div>
